# Machine-Learning-for-Time-Series-with-Python-Second-Edition

./: .gitignore  README.md  pyproject.toml
chapter10/: Adversarial Robustness.ipynb  Deployment and Observability.ipynb  Production Data Pipeline.ipynb  Scaling and Hierarchy.ipynb
chapter11/: Causal Inference.ipynb  Drift Detection.ipynb  Time Series Classification.ipynb
chapter12/: Discrete-Time Hazard and Financial Risk.ipynb  Intermittent Demand Forecasting.ipynb  Survival Analysis and Conversion Forecasting.ipynb  discrete_survival.py  finance_panel.py  marketing_survival.py  survival_forecasting.py
chapter2/: .gitignore  01_diagnostics_and_decomposition.ipynb  02_data_pipeline.ipynb  03_visualization_and_benchmarks.ipynb  data.py  pyproject.toml
chapter3/: 01_classical_baselines.ipynb  02_validation_strategies.ipynb  03_forecasting_pipeline.ipynb
chapter4/: 01_modern_forecasting_libraries.ipynb  02_ml_forecasting_workflow.ipynb
chapter5/: 01_data_prep_and_features.ipynb  02_forecast_model_lightgbm.ipynb  03_advanced_and_automated.ipynb
chapter6/: Case Study - Australian Tourism.ipynb  Hierarchical Models.ipynb  Multivariate forecasting.ipynb
chapter7/: Foundational Architectures.ipynb  Modern Architectures.ipynb  TimesNet.ipynb  Transformers.ipynb
chapter8/: Adaptive Uncertainty with CQR.ipynb  Conformal Prediction with MAPIE.ipynb  Hybrid GARCH-Conformal.ipynb
chapter9/: Qualitative Models.ipynb  Quantitative Foundation Models.ipynb
tests/: test_notebooks.py
