[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "My awesome project"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "shap<0.44",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "jupyter>=1.1.1",
    "pandas==2.3.3",
    "matplotlib==3.10.7",
    "statsmodels==0.14.5",
    "scikit_learn==1.7.2",
    "yfinance==0.2.66",
    "pmdarima==2.1.1",
    "sktime==0.40.1",
    "statsforecast==2.0.3",
    "darts==0.39.0",
    "skforecast==0.19.0",
    "autogluon==1.4.0",
    "mlforecast==0.14.0",
    "skforecast==0.19.0",
    "openpyxl==3.1.5",
    "tsfresh==0.21.1",
    "hierarchicalforecast==1.4.0",
    "neuralforecast==3.0.2",
    "arch==8.0.0",
    "seaborn==0.13.2",
    "datasetsforecast==1.0.0",
    "chronos-forecasting==2.2.2",
    "timesfm==1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.10.0",
    "mypy>=1.7.0",
    "ruff>=0.14.8",
]

